openmediavault (6.0.40-1) stable; urgency=low

  * Reduce final UI bundle size by 50%.
  * Issue #1386: Add switch to turn on/off dark mode.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 10 Sep 2022 10:57:41 +0200

openmediavault (6.0.39-1) stable; urgency=low

  * Update locale files.
  * Various improvements, e.g. code refactoring of the
    Dashboard widgets.
  * Fix error when accessing the FTP service stats page.
  * Relocate FTP welcome message into the /etc/proftpd directory.
  * Add new Dashboard widget type to display simple values.
    The 'System time' and 'System updates' widget have been
    added as examples.
  * Issue #1384: Incorrect disk usage warning is displayed for
    BTRFS file systems.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 31 Aug 2022 22:17:25 +0200

openmediavault (6.0.38-1) stable; urgency=low

  * Packages that are changing dependencies are now installed
    when pressing the 'Install packages' button in the
    'System | Update Management | Updates' page. This should
    prevent confusion why packages are kept back in the UI
    but installed via the CLI command 'omv-upgrade'.
  * Issue #1381: Fixed an error when changing a user that does
    not yet exist in the database.
  * Issue #1383: Fix proftpd issue when ban rules are activated.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 29 Aug 2022 16:09:06 +0200

openmediavault (6.0.37-1) stable; urgency=low

  * Various UI improvements.
  * Issue #1379: Choosing a path in the shared folder form
    field does not mark the form as dirty.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 22 Aug 2022 00:05:50 +0200

openmediavault (6.0.36-2) stable; urgency=low

  * Update locale files.
  * Enable remote searching in user/group management pages.
  * Adapted Samba vfs_fruit settings according to the wiki to
    better work with Mac OS X.
    The following environment variables have been introduced
    to customize these settings: