@@ -2,6 +2,7 @@ openmediavault (6.0.40-1) stable; urgency=low
 
   * Reduce final UI bundle size by 50%.
   * Issue #1386: Add switch to turn on/off dark mode.
+  * Add the 'Uptime' Dashboard widget.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 10 Sep 2022 10:57:41 +0200
 
